<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/attendees"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAttendees"
            android:background="@color/green_200"
            android:layout_width="match_parent"
            android:layout_height="320dp" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/plan_trip"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTripDays"
            android:background="@color/green_200"
            android:layout_width="match_parent"
            android:layout_height="548dp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/create"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>